# owo

./: .gitignore  README.md  pyproject.toml  setup.py
owo/: __init__.py  __main__.py  config.py  format.py  parseargs.py
owo/datafiles/: __init__.py
owo/output/: OutputObject.py  owoOutputClass.py
owo/source/network/: DownloadJob.py
res/jinja/text/: output.help.commands.jinja  output.help.full.jinja  output.help.usage.jinja
res/locale/: en_US.yaml
res/yaml/defaults/: config.yaml
res/yaml/locale/en_US/: locales.yaml  msg.yaml
scripts/: test_debug.sh
src/: __init__.py  __main__.py  config.py
src/datafiles/: __init__.py
src/output/: OutputObject.py  __init__.py
