[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owo"
version = "0.0.0-alpha0"
authors = [
  { name="elburg", email="whotookelburg@hotmail.com" },
]
description = "if it exists, it can (probably) be fetched..."
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = [ 
  "nmap",
  "network",
  "fetch",
  "sqlite3"
]
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Development Status :: 1 - Planning",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Database",
	"Topic :: Internet",
	"Topic :: Internet :: File Transfer Protocol (FTP)",
	"Topic :: Internet :: Finger",
	"Topic :: Internet :: Name Service (DNS)",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
	"Topic :: System :: Networking",
	"Topic :: Utilities"
]
dependencies = [
		"PyYAML"
]

[project.urls]
"Homepage" = "https://basedwa.re/elburg/owo"
"Repository" = "https://basedwa.re/elburg/owo.git"
"Bug Tracker" = "https://basedwa.re/elburg/owo/issues"i

[project.optional-dependencies]
ALL = [ # ONLY FOR SERVERS OR BIG COMPUTERS
    "yt-dlp"
]
